salesforce/force-app/main/default/objects/AttributionClass__mdt/AttributionClass__mdt.object-meta.xml
<CustomObject>
    <description>Phase 19d — Attribution class labels (A through E). One source of truth replacing 3+ copies of CLASS_LABELS across Apex + LWC. Consulting firms can rename to match their internal taxonomy.</description>
    <label>Attribution Class</label>
    <pluralLabel>Attribution Classes</pluralLabel>
</CustomObject>