salesforce/force-app/main/default/objects/AttributionClass__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Display Label</label>
    <description>Human-readable label (e.g. "Process and System Disconnect").</description>
    <type>Text</type><length>120</length>
</CustomField>