salesforce/force-app/main/default/objects/AttributionClass__mdt/fields/Letter__c.field-meta.xml
<CustomField>
    <fullName>Letter__c</fullName>
    <label>Letter</label>
    <description>Single-letter id (A, B, C, D, E).</description>
    <type>Text</type><length>1</length><required>true</required><unique>true</unique>
</CustomField>